# luki-api-gateway

./: .dockerignore  .railwayignore  Dockerfile  PHASE_1B_INTEGRATION.md  Procfile  README.md  env.example  phase_1b_test_results.json  pyproject.toml  railway.toml  requirements-railway.txt  requirements.txt  test_api_gateway_integration.py  test_memory_integration.py  test_phase_1b_integration.py  test_powershell.ps1  test_simple_chat.py
docs/: next-phase-roadmap.md
luki_api/: __init__.py  config.py  constants.py  exceptions.py  main.py
luki_api/auth/: __init__.py  api_key.py  jwt.py  rbac.py
luki_api/clients/: __init__.py  agent_client.py  memory_service.py  security_service.py  wallet_client.py
luki_api/middleware/: __init__.py  auth.py  cache.py  circuit_breaker.py  logging.py  metrics.py  rate_limit.py  tracing.py  validation.py
luki_api/models/: errors.py
luki_api/monitoring/: health_monitor.py
luki_api/routes/: __init__.py  chat.py  cognitive.py  conversation.py  conversations.py  elr.py  health.py  memories.py  metrics.py  uploads.py  wallet.py
luki_api/utils/: __init__.py  validators.py
scripts/: run_dev.sh  run_dev_api_gateway.py
tests/: __init__.py  test_conversations_api.py  test_health.py
tests/integration/: conftest.py  test_agent_integration.py  test_auth_and_rate_limit.py  test_elr_endpoints.py  test_logging_and_tracing.py  test_metrics.py
